# parallel_programming

./: README.md
lab1/: main.cpp  matrix_utils.cpp  matrix_utils.hpp  results.txt  timings.txt  verify.py
lab2/: CMakeLists.txt  main.cpp  results.txt  verify.py
lab3/: CMakeLists.txt  main.cpp  main_k.cpp  results.txt  run.pbs  verify.py
